sfdx-source/SmartVisca/main/default/objects/JinjiIdoEmail__c/JinjiIdoEmail__c.object-meta.xml
<CustomObject>
    <description>オプション：人事異動情報の通知メールを登録
Option:Stores personnel change information alert mail.</description>
    <label>人事異動情報メール通知</label>
    <nameField>
        <label>人事異動情報メール通知名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>