sfdx-source/SmartVisca/main/default/objects/JinjiIdoEmail__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>本文</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>