sfdx-source/SmartVisca/main/default/objects/JinjiIdoEmail__c/fields/SendMailDate__c.field-meta.xml
<CustomField>
    <fullName>SendMailDate__c</fullName>
    <label>メール送信日</label>
    <type>DateTime</type>
</CustomField>