sfdx-source/SmartVisca/main/default/objects/JinjiIdoEmail__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メール宛先</label>
    <referenceTo>User</referenceTo>
    <relationshipName>JinjiIdoEmailUsers</relationshipName>
    <type>Lookup</type>
</CustomField>