sfdx-source/SmartVisca/main/default/objects/JinjiIdoEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>SendMailDate__c</columns>
    <columns>Body__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>